<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/signinpic"
    tools:context=".signIn_activity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_height="match_parent">




        <EditText
            android:id="@+id/tvSigninEmail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:hint="@string/emailTextView"
            android:background="@color/white"
            android:alpha="0.3"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="22dp"
            />

        <EditText
            android:id="@+id/tvSigninPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:alpha="0.3"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passwordTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="22dp" />

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:alpha="0.7"
            android:onClick="onEmailPasswordAuthClick"
            android:text="@string/signInButtonText"
            android:textAllCaps="false"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onForgotPasswordClicked"
            android:clickable="true"
            android:textSize="20dp"
            android:text="@string/ForgotPasswordTextView"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/textView"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/OrSeparatorTextView" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:layout_gravity="left" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:alpha="0.7"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:textSize="20dp"
            android:gravity="right"
            android:textAlignment="gravity"
            android:paddingLeft="15dp"
            android:paddingRight="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_logout_text="Continue with Facebook"/>
        />


        <TextView
            android:id="@+id/btnAnonymousSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="18dp"
            android:alpha="0.7"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:onClick="onSignInAnonymouslyClicked"
            android:text="@string/anonymousSignButtonText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />
        <Button
            android:id="@+id/btnToSignUp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onToSignUpClicked"
            android:layout_marginBottom="50dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:alpha="0.7"
            android:text="@string/toSignUpButtonText" />


    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>